# silver-parakeet

./: .gitignore  CLAUDE.md  MERGE_NOTE.md  Makefile  PLAN.md  README.md  SYNC_RECORD.md  install.sh  pyproject.toml  wingman.service.in
.github/workflows/: ci.yml
docs/: DEMO.md  EXECUTION.md  PHONE.md  RUNNING.md
migrations/: 0001_initial.sql  001_initial.sql  002_job_indexes.sql  003_hidden_flag_and_one_application_per_job.sql  004_activity_timestamps.sql
src/wingman/: cli.py  config.py
src/wingman/db/: migrations.py
src/wingman/web/: app.py
static/: app.css
systemd/: wingman.service.in
templates/: dashboard.html
tests/: conftest.py  test_adapters.py  test_ai_providers.py  test_aiscore.py  test_app.py  test_apply_routes.py  test_ats.py  test_auth.py  test_boolquery.py  test_capture.py  test_config.py  test_db.py  test_engine.py  test_events_page.py  test_fillers.py  test_inbox.py  test_ingest.py  test_letters.py  test_matching.py  test_metrics.py  test_notify.py  test_prep.py  test_restore.py  test_scheduler.py  test_scoring.py  test_sources_page.py  test_tracker.py  test_vault.py
tests/fixtures/: adzuna.json  ashby_board.json  ashby_captcha.html  ashby_form.html  generic.rss  greenhouse_board.json  greenhouse_captcha.html  greenhouse_form.html  hn_item.json  hn_search.json  jobpage_jsonld.html  jobpage_plain.html  lever_board.json  lever_form.html  remoteok.json  remotive.json  usajobs.json  workable_captcha.html  workable_form.html  wwr.rss
wingman/: __init__.py  ai.py  aiscore.py  app.py  auth.py  backup.py  boardkeys.py  boolquery.py  capture.py  config.py  db.py  ingest.py  letters.py  main.py  metrics.py  notify.py  prep.py  scheduler.py  scoring.py  timeutil.py  tracker.py  vault.py  web.py
wingman/apply/: __init__.py  ats.py  engine.py  matching.py  packet.py
wingman/apply/fillers/: __init__.py  ashby.py  common.py  greenhouse.py  lever.py  workable.py
wingman/routes/: __init__.py  ai.py  apply.py  auth.py  capture.py  criteria.py  events.py  inbox.py  metrics.py  notify.py  sources.py  tracker.py  vault.py
wingman/sources/: __init__.py  adzuna.py  boards.py  hn.py  remoteok.py  remotive.py  rss.py  usajobs.py  wwr.py
wingman/static/: manifest.webmanifest  sw.js  wingman.css
wingman/templates/: _job_bits.html  ai.html  apply.html  base.html  capture.html  criteria.html  criteria_form.html  dashboard.html  events.html  inbox.html  job_detail.html  metrics.html  notify.html  profile.html  sources.html  tracker.html
