[project]
name = "wingman"
version = "0.1.0"
description = "Self-hosted, local-first job-search copilot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "httpx>=0.27",
    "apscheduler>=3.10,<4",
    "feedparser>=6.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
wingman = "wingman.main:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wingman"]

[tool.hatch.build.targets.wheel.force-include]
"migrations" = "wingman/migrations"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.File", "fastapi.Form", "fastapi.Depends"]

[tool.pytest.ini_options]
testpaths = ["tests"]
