[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wingman"
version = "0.1.0"
description = "Self-hosted job-search copilot for Linux"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "jinja2>=3.1.6",
  "python-multipart>=0.0.20",
  "pydantic>=2.11.0",
]

[project.scripts]
wingman = "wingman.cli:main"

[dependency-groups]
dev = ["pytest>=8.4.0", "ruff>=0.12.0", "httpx>=0.28.0"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = true
